Fixed cohort overflow.

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -788,6 +788,9 @@ body {
 			.visualization.spatial-map .container {
 				height: 500px;
 			}
+				.visualization.cohort {
+					overflow: auto;
+				}
 				.visualization.cohort table {
 					width: 100%;
 				}
